# opengl-window

./: .gitignore  CMakeLists.txt  README.md  build-debug.bat
src/: window.cpp
src/input/: input.h
src/window/: init_window.h
